src/test/invalid/semanticErr/custom/multipleSemErr.wacc
begin
  int x = false;
  int y = true;
  int z = x + y
 end
